# learny

./: README.md  setup.cfg
.github/workflows/: ci.yml
learny/eleven_plus/: 11plus_82_claude_words_game_params.json  11plus_focus_words_game_params.json  11plus_sep_19_words_game_params.json  11plus_words_game_params.json  500_words_for_11_plus.ipynb  eleven_plus_quiz_app.tsx  quiz-standalone-test.html  words_groups.json
learny/eleven_plus/quiz-test/: package-lock.json  package.json  vite.config.ts
learny/eleven_plus/quiz-test/src/: App.tsx  eleven_plus_quiz_app.tsx  index.css  words_groups.json
