[metadata]
root_url = https://github.com/thorwhalen/
license = mit
author = Thor Whalen
version = 0.0.1
description = Turn learning into play — build knowledge with joy
description_file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		
name = learny
display_name = learny

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
		

[options.extras_require]
testing = 
		

